fix bug with item by merging generated data with that from the default resource pack